@@ -494,6 +494,9 @@ Changed in ATK 5.7
 * In advanced search labels are always shown (before AF_NO_LABEL was used to
   determine if a label should be shown). [Lineke]
 * Made the new 'modern' menu the default menu in new installations. [Boy]
+* Fixed: Open Office document generator. On some systems unzip and zip would 
+  return -1 instead of 0 on succesfull completion. However, no actual 
+  information found on the internet to back this up). [Dennis, Guido]
 + Added setAutoCompleteMinChars function for atkManyToOneRelations. [Peter,Dennis]
 - Temporarily removed the 'generate title row' checkbox in atkExportHandler as
   it isn't yet implemented. [Guido]
